k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: afribiz
  labels:
    name: afribiz
    environment: production
